[package]
name = "fst-perf-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bstr = "0.2.17"
clap = { version = "3.0.10", features = ["derive"] }
fst = "0.4.7"
levenshtein_automata = { version = "0.2.1", features = ["fst_automaton"] }
memmap2 = "0.5.2"

# A version of fst-regex which depends on fst 0.4.7 instead of an old 0.3.1.
fst-regex = { path = "../fst/fst-regex" }

[patch.crates-io]
# A patched version of the fst starting from:
# https://github.com/MarinPostma/fst/commit/ad1f72e5f5341344ad6505460be879d10c784541
#
# Where we also patched the UnionState, IntersectionState and, ComplementState
# tuple stucts to make the fields publicly accessible.
fst = { path = "../fst" }
